--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ $('.features').click(function(){
 /*part3--角色*/
 var roleswiper = new Swiper('.roles_wrap', {
     loop : true, 
-     effect: 'fade',
+    // effect: 'fade',
     on:{
       slideChangeTransitionEnd:function(roleswiper){
         $(" .swiper_dock_list").css({"z-index":"1000"});
