--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <h2>Craftsman</h2>
                     <P>Craftsmen integrate the principles of alchemy into guns, and pour out firepower in an instant to wipe out their enemies.</P>
                   </div>
-                  <div class="role_img1 role_img" style="z-index:1;"></div>
+                  <div class="role_img1 role_img" style="z-index:1;"><img  src="images/part3_role_img02.png"/></div>
                 </div>
                 <div class="swiper-slide">
                   <div class="role_info role_info2">
