--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
   </div>
 </div>
 <!--main-->
-
+<div class="swiper-container swiper-fullscreen">
+  <div class="swiper-wrapper">
+   <div class="swiper-slide" style="height: 100%; background:red;">
+      </div>
+    <div class="swiper-slide">
   <div class="cn_hl_title"><img src="images/part3_title.png"></div>
   <div class="game_roles">
     <div class="swiper-container roles_wrap">
@@ -110,6 +114,9 @@
     </ul>
   </div>
 
+</div>
+</div>
+</div>
 </div>
 <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
 <script type="text/javascript" src="js/swiper.min.js"></script>
