--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
     <div class="dock_list">
     <ul class="swiper_dock_list">
       <li> 
-        <a href="javascript:void(0)"><img class="icon on " src="images/part3_ico_bg.png"/></a>
+        <a href="javascript:void(0)"><img class="icon on " src="images/part3_small_hover_01.png"/></a>
       </li>
       <li>
-        <a href="javascript:void(0)"><img class="icon" src="images/part3_ico_bg.jpg"/></a>
+        <a href="javascript:void(0)"><img class="icon" src="images/part3_small_hover_01.png"/></a>
       </li>
       <li>
-        <a href="javascript:void(0)"><img class="icon" src="images/part3_ico_bg.jpg"/></a>
+        <a href="javascript:void(0)"><img class="icon" src="images/part3_small_hover_01.png"/></a>
       </li>
       <li>
-        <a href="javascript:void(0)"><img class="icon" src="images/part3_ico_bg.jpg"/></a>
+        <a href="javascript:void(0)"><img class="icon" src="images/part3_small_hover_01.png"/></a>
       </li>
     
       
