--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
           </ul>
        </div>
        <div class="game_roles" style="z-index:1;">
-       <div class="swiper-container roles_wrap">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
+       <div class="swiper-container roles_wrap" style="z-index:1">
+            <div class="swiper-wrapper" style="z-index:1">
+                <div class="swiper-slide" style="z-index:1">
                   <div class="role_info role_info1">
                     <h2>Craftsman</h2>
                     <P>Craftsmen integrate the principles of alchemy into guns, and pour out firepower in an instant to wipe out their enemies.</P>
