--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
     <!--part3-->
     <div class="swiper-slide slide3" data-hash="slide03">
-      <div class="main_show" style="border:10px solid #f00;">
+      <div class="main_show" style="border:2px solid #00f;">
         <div class="dock_list" style="z-index:1000;">
      
         <ul class="swiper_dock_list" style="z-index:1000;">
@@ -115,26 +115,26 @@
                   </div>
                   <div class="role_img1 role_img" style="z-index:1;"></div>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide" style="z-index:1">
                   <div class="role_info role_info2">
                     <h2>Gladiator</h2>
                     <P>Gladiators use the katana as their weapon and are good at close combat, showing amazing strength whirling a sharp blade!</P>
                   </div>
-                  <div class="role_img2 role_img"></div>
+                  <div class="role_img2 role_img" style="z-index:1"></div>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide" style="z-index:1">
                   <div class="role_info role_info3">
                     <h2>Ranger</h2>
                     <P>Rangers have unparalleled mobility and agility, they find the weakness of the enemy and move to kill in one shot!</P>
                   </div>
-                  <div class="role_img3 role_img"></div>
+                  <div class="role_img3 role_img" style="z-index:1"></div>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide" style="z-index:1"> 
                   <div class="role_info role_info4">
                     <h2>Scholar</h2>
                     <P>The magic book held in the hand contains many mysteries, allowing them to deal great damage. They are good at defeating enemies with spells from a distance.</P>
                   </div>
-                  <div class="role_img4 role_img"></div>
+                  <div class="role_img4 role_img" style="z-index:1"></div>
                 </div>
            
             </div>
