--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <div class="swiper-wrapper">
     <!--part1-->
-    <div class="swiper-slide slide1" data-hash="slide01" >
+    <div class="swiper-slide slide1" data-hash="slide01" > 
       <div class="main_show">
           <div class="part1_menu"><img src="images/part1_menu.png"></div>
           <div class="part1_logo"><img src="images/part1_logo.png"></div>
@@ -73,7 +73,7 @@
       </div>
     </div>
     <!--part2-->
-    <div class="swiper-slide slide2" data-hash="slide02">
+    <div class="swiper-slide slide2" data-hash="slide02" >
       <div class="main_show">
           <div class="part2_title"><img src="images/part2_title.png"></div>    
           <div class="part2_register_btn"><a href="https://longlobal.onelink.me/e7jh/tbodpc51" target="_blank"><img src="images/part2_register.png"></a></div>    
@@ -87,8 +87,14 @@
     </div>
     <!--part3-->
     <div class="swiper-slide slide3" data-hash="slide03">
-      <div class="main_show" style="border:2px solid #00f;">
+      <div class="main_show" style="border:5px solid #f00;">
         <div class="dock_list" style="z-index:1000;">
+        <div class="swiper-container" style="z-index:1000;" >
+
+          <div class="swiper-wrapper"  style="z-index:1000;">
+            <!--part1-->
+            <div class="swiper-slide"  style="z-index:1000;"> 
+       
      
         <ul class="swiper_dock_list" style="z-index:1000;">
               <li style="z-index:1000;"> 
@@ -104,7 +110,7 @@
                 <a href="javascript:void(0)"><img class="icon" src="images/part3_small_hover_01.png"/></a>
               </li>
           </ul>
-       </div>
+       </div> </div> </div> </div>
        <div class="game_roles" style="z-index:1;">
        <div class="swiper-container roles_wrap" style="z-index:1">
             <div class="swiper-wrapper" style="z-index:1">
@@ -153,7 +159,7 @@
 
     </div>
     <!--part4-->
-    <div class="swiper-slide slide4" data-hash="slide04">
+    <div class="swiper-slide slide4" data-hash="slide04"  >
       <div class="main_show">
          <!-- <div class="part4_fw"></div>  -->
           <div class="part4_title"><img src="images/part4_title.png" /></div>
@@ -288,7 +294,7 @@
       </div>
     </div>
     <!--part5-->
-    <div class="swiper-slide slide5" data-hash="slide05">
+    <div class="swiper-slide slide5" data-hash="slide05" >
       <div class="main_show">
         <div class="list_wrap">
           <div class="list_box">
@@ -487,7 +493,7 @@
       </div>
     </div>
     <!--part6-->
-    <div class="swiper-slide slide6" style="height:869px" data-hash="slide06">
+    <div class="swiper-slide slide6" style="height:869px" data-hash="slide06" >
       <div class="swipera cf">
           <div class="swiper-container img_swiper">
               <div class="swiper-wrapper">
