--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
     <!--part3-->
     <div class="swiper-slide slide3" data-hash="slide03">
-      <div class="main_show" style="border:5px solid #f00;">
+      <div class="main_show" >
         <div class="dock_list" style="z-index:1000;">
         <div class="swiper-container" style="z-index:1000;" >
 
