--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>手机端首页</title>
+    <title>2222222</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta content="yes" name="apple-mobile-web-app-capable" />
