--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   <div class="swiper-wrapper">
     <!--part1-->
     <div class="swiper-slide slide1" data-hash="slide01" >
-      <!-- <video src="media/main.mp4" class="bg-video" muted="" loop="loop" autoplay="autoplay"></video>  -->
+     <video src="media/main.mp4" class="bg-video" muted="" loop="loop" autoplay="autoplay"></video>
      
       <div class="main_show">
          <div class="bgm_icon"> <img src="images/part1_music.png" id="bgm_icon"></div>
