--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="css/style.css" rel="stylesheet">
   <link href="css/common.css" rel="stylesheet">
   <link href="css/colorbox.css" rel="stylesheet">
-  <title>레오네: 레전드 오브 네버랜드</title>
+  <title>2111레오네: 레전드 오브 네버랜드</title>
   <meta name="keywords" content="" />
   <meta name="description" content="" />
 </head>
@@ -381,7 +381,7 @@
                         <div class="swiper-slide"><img src="images/part8_bdl_small.png" /></div>
                         <div class="swiper-slide"><img src="images/part8_sly_small.png" /></div>
                         <div class="swiper-slide"><img src="images/part8_jg_small.png" /></div>
-                        <div class="swiper-slide"><img src="images/part8_linglan_small.png" /></div>
+                        <div class="swiper-slide"><img src="images/part8_ct_small.png" /></div>
                         <div class="swiper-slide"><img src="images/part8_sl_small.png" /></div>
                         <div class="swiper-slide"><img src="images/part8_sc_small.png" /></div>
                         <div class="swiper-slide"><img src="images/part8_ct_small.png" /></div>
